[B]Version 2.1.1 - 2014-03-25[/B]
- Fixed python 2.6 compatibility

[B]Version 2.1.0 - 2014-03-24[/B]
- Fixed 'red tint' problem and other minor problems on Gotham
- Update language files from Transifex

[B]Version 2.0.6 - unreleased[/B]
- Merged ONTV source into XMLTV
  It's now possible to load XMLTV either from a local file or from a URL
- Display a 'No program available' for channels without programs to be able to stream

[B]Version 2.0.5 - 2013-06-04[/B]
- Fixed encoding problem with XMLTV logo images
- Fixed problem with invalid channels on last page

[B]Version 2.0.4 - 2013-05-24[/B]
- Fixed error with detecting updated XMLTV
- Improved error handling when parsing addons.ini

[B]Version 2.0.3 - 2013-05-03[/B]
- Changed when source data is reloaded
  XMLTV files will now reload when they are updated
- Improved error handling of corrupted XMLTV files
- Minor bugfixes

[B]Version 2.0.2 - 2013-04-25[/B]
- Improved handling of database initalization errors
- Update language files from Transifex

[B]Version 2.0.1 - 2013-03-06[/B]
- Fixed minor problems with stream setup UI
- Fixed problem with the hour being displayed twice in start/end times
- Update language files from Transifex

[B]Version 2.0.0 - 2013-02-03[/B]
New version with many improvements.
If you have problems with video streaming please try
without OSD enabled or with the alternate streaming method.
Also feel free to comment in the forum thread:
http://forum.xbmc.org/showthread.php?t=120377

Major improvements:
- New default skin [I]Blue EPG[/I] (thanks maly95)
- Rewrote database layer so database is only access through a single thread.
- Added FilmOn support and fixes (thanks mikey1234)
- Added [I]Alternative streaming[/I] option to settings (required for FilmOn)
- Improved support for smb:// and nfs:// sources

[B]Version 1.3.99 - 2013-02-01[/B]
- Added FilmOn support and fixes (thanks mikey1234)
- Added [I]Alternative streaming[/I] option to settings (required for FilmOn)