@@ -10,6 +10,69 @@ DR Ramasjang=plugin://plugin.video.dr.dk.live/?playChannel=5
 DR HD=plugin://plugin.video.dr.dk.live/?playChannel=6
 Kanal Sport=plugin://plugin.video.dr.dk.live/?playChannel=203
 
+[plugin.video.tvpor]
+RTP1=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DRTP+1%5B%2FB%5D
+RTP2=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DRTP+2%5B%2FB%5D
+SIC=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSIC%5B%2FB%5D
+TVI=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DTVI%5B%2FB%5D
+SPTV1=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSPORTTV+1%5B%2FB%5D
+SPTV1=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSPORTTV+1+HD%5B%2FB%5D
+SPTV2=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSPORTTV+2%5B%2FB%5D
+SPTV3=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSPORTTV+3%5B%2FB%5D
+SPTV4=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSPORTTV+4%5B%2FB%5D
+SPTV5=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSPORTTV+5%5B%2FB%5D
+SLB=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DBenfica+TV+1%5B%2FB%5D
+SLB2=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DBenfica+TV+2%5B%2FB%5D
+SCP=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSporting+TV%5B%2FB%5D
+PORTO=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DPorto+Canal%5B%2FB%5D
+ABOLA=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DA+Bola+TV%5B%2FB%5D
+CMTV=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DCM+TV%5B%2FB%5D
+RTPAC=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DRTP+A%C3%A7ores%5B%2FB%5D
+RTPA=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DRTP+Africa%5B%2FB%5D
+RTPIN=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DRTP+Informa%C3%A7ão%5B%2FB%5D
+RTPINT=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DRTP+Internacional%5B%2FB%5D
+RTPMD=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DRTP+Madeira%5B%2FB%5D
+RTPM=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DRTP+Memória%5B%2FB%5D
+SICK=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSIC+K%5B%2FB%5D
+SICM=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSIC+Mulher%5B%2FB%5D
+SICN=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSIC+Noticias%5B%2FB%5D
+SICR=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSIC+Radical%5B%2FB%5D
+TVI24=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DTVI24%5B%2FB%5D
+TVIFIC=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DTVI+Fic%C3%A7%C3%A3o%5B%2FB%5D
+SEM=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DMais+TVI%5B%2FB%5D
+ETVHD=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DEcon%C3%B3mico+TV%5B%2FB%5D
+HOLLW=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DHollywood%5B%2FB%5D
+SEM=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DMOV%5B%2FB%5D
+AXN=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DAXN%5B%2FB%5D
+AXNBL=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DAXN+Black%5B%2FB%5D
+AXNWH=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DAXN+White%5B%2FB%5D
+FOX=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DFOX%5B%2FB%5D
+FOXCR=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DFOX+Crime%5B%2FB%5D
+FLIFE=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DFOX+Life%5B%2FB%5D
+FOXM=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DFOX+Movies%5B%2FB%5D
+SYFY=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DSyfy%5B%2FB%5D
+DISNY=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DDisney+Channel%5B%2FB%5D
+DISNYJ=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DDisney+Junior%5B%2FB%5D
+PANDA=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DCanal+Panda%5B%2FB%5D
+BIGGS=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DPanda+Biggs%5B%2FB%5D
+MOTOR=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DMotors+TV%5B%2FB%5D
+CHELS=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DChelsea+TV%5B%2FB%5D
+CAÇAP=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DCa%C3%A7a+e+Pesca%5B%2FB%5D
+TOROTV=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DToros+TV%5B%2FB%5D
+DISCV=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DDiscovery+Channel%5B%2FB%5D
+DISCT=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DDiscovery+Turbo%5B%2FB%5D
+ODISS=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DOdisseia%5B%2FB%5D
+HIST=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DHist%C3%B3ria%5B%2FB%5D
+NGC=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DNational+Geographic+Channel%5B%2FB%5D
+EURSP=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DEurosport%5B%2FB%5D
+EURS2=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DEurosport+2%5B%2FB%5D
+SEM=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DESPN%5B%2FB%5D
+FASH=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DFashion+TV%5B%2FB%5D
+VH1=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DVH1%5B%2FB%5D
+MTV=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DMTV%5B%2FB%5D
+GLOBO=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DTV+Globo%5B%2FB%5D
+TVREC=plugin://plugin.video.tvpor/?url=nada&mode=16&name=%5BB%5DTV+Record%5B%2FB%5D
+
 [plugin.video.yousee.tv]
 DR1=plugin://plugin.video.yousee.tv/?channel=1
 DR2=plugin://plugin.video.yousee.tv/?channel=2
