@@ -1,3 +1,7 @@
+[B]Version 2.1.2 - 2014-09-23[/B]
+- Add MEO SAPO EPG source
+- Added TVPortuguesa support
+
 [B]Version 2.1.1 - 2014-03-25[/B]
 - Fixed python 2.6 compatibility
 
